force-app/main/default/objects/SBQQ__Quote__c/fields/Yotta_s_Customers_Required__c.field-meta.xml
<CustomField>
    <fullName>Yotta_s_Customers_Required__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Yotta’s Customers Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>