force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Regular.recordType-meta.xml
<RecordType>
    <fullName>Regular</fullName>
    <active>true</active>
    <description>Used for Regular Quotes</description>
    <label>Regular</label>
</RecordType>