force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <description>Used for Renewal Quotes</description>
    <label>Renewal</label>
</RecordType>