force-app/main/default/objects/SBQQ__Quote__c/recordTypes/SCF.recordType-meta.xml
<RecordType>
    <fullName>SCF</fullName>
    <active>true</active>
    <description>Used for SCF/Amendment Quotes</description>
    <label>SCF</label>
</RecordType>