force-app/main/default/objects/SBQQ__Quote__c/validationRules/Account_Should_be_changed_for_TOS_SCF.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Should_be_changed_for_TOS_SCF</fullName>
    <active>true</active>
    <description>Account Should be changed for TOS SCF on OMT approval submission and contract generation</description>
    <errorConditionFormula>AND(
  ISPICKVAL( SCF_Type__c, &apos;Transfer of Service&apos;),
  OR( Submit_for_Approval__c,
      Contracted__c,
      ISPICKVAL( SBQQ__Status__c, &apos;Presented&apos;),
      ISPICKVAL( SBQQ__Status__c, &apos;Customer Accepted&apos;)
  ),
  SBQQ__Account__c = SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.AccountId 
)</errorConditionFormula>
    <errorMessage>The account should be changed in Transfer of Service SCF</errorMessage>
</ValidationRule>