force-app/main/default/objects/SBQQ__Quote__c/validationRules/Approval_Not_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Not_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED( Submit_for_Approval__c ),
 Submit_for_Approval__c,
  ISPICKVAL(SBQQ__Type__c  , &apos;Quote&apos;) ,
 OR(
  ISPICKVAL( Technical_Approval_Status__c , &quot;Not Required&quot;),
  ISPICKVAL( Technical_Approval_Status__c , &quot;Approved&quot;)
 ),
 OR(
  ISPICKVAL( Commercial_Approval_Status__c , &quot;Not Required&quot;),
  ISPICKVAL( Commercial_Approval_Status__c , &quot;Approved&quot;)
 ),
 OR(
  ISPICKVAL( Term_Condition_Approval_Status__c , &quot;Not Required&quot;),
  ISPICKVAL( Term_Condition_Approval_Status__c , &quot;Approved&quot;)
 ) 
)</errorConditionFormula>
    <errorMessage>Approval is not required!!</errorMessage>
</ValidationRule>