force-app/main/default/objects/SBQQ__Quote__c/validationRules/Cannot_contract_if_SCF_not_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_contract_if_SCF_not_approved</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL( SBQQ__Type__c , &apos;Quote&apos;) &amp;&amp;  
!ISPICKVAL(SCF_Approval_Status__c  , &apos;Approved&apos;) &amp;&amp;  
Contracted__c</errorConditionFormula>
    <errorMessage>Please get OMT Approval to generate the contract</errorMessage>
</ValidationRule>