force-app/main/default/objects/SBQQ__Quote__c/validationRules/Cannot_Edit_Renewal_Quote_Auto.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Renewal_Quote_Auto</fullName>
    <active>true</active>
    <description>Cannot Change SCF Type for Renewal Quote where Contract is marked as Auto</description>
    <errorConditionFormula>AND(
ISPICKVAL(SBQQ__Opportunity2__r.SBQQ__RenewedContract__r.Renewal_Type__c , &apos;Auto&apos;),
ISCHANGED(SCF_Type__c),
ISPICKVAL(SBQQ__Type__c , &apos;Renewal&apos;)
)</errorConditionFormula>
    <errorMessage>Cannot Change SCF Type for Auto Renewal Quote</errorMessage>
</ValidationRule>