force-app/main/default/objects/SBQQ__Quote__c/validationRules/Cannot_Specify_SCF_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Specify_SCF_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(SBQQ__Type__c, &quot;Amendment&quot;)),
    NOT(ISPICKVAL(SBQQ__Type__c, &quot;Renewal&quot;)),
    NOT(ISBLANK(TEXT( SCF_Type__c )))
)</errorConditionFormula>
    <errorMessage>SCF Type can only be specified for Amendment &amp; Renewal Quote</errorMessage>
</ValidationRule>