force-app/main/default/objects/SBQQ__Quote__c/validationRules/Cannot_Update_SCF_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_SCF_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(SBQQ__Type__c, &quot;Amendment&quot;),
    ISCHANGED( SCF_Type__c ),
    SCF_Product_Count__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>SCF_Type__c</errorDisplayField>
    <errorMessage>Cannot Update SCF Type once SCF is completed on Quote Lines</errorMessage>
</ValidationRule>