force-app/main/default/objects/SBQQ__Quote__c/validationRules/Cant_modify_quote_on_Closed_Opty.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_modify_quote_on_Closed_Opty</fullName>
    <active>true</active>
    <description>Cannot modify quote as opportunity is already closed.</description>
    <errorConditionFormula>AND(
  SBQQ__Opportunity2__r.IsClosed,
   NOT(ISCHANGED(Signed_SCF_Uploaded__c)) ,
  IF(ISCHANGED(OwnerId),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    True
  ),
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Cannot modify quote as opportunity is already closed.</errorMessage>
</ValidationRule>