force-app/main/default/objects/SBQQ__Quote__c/validationRules/Contract_cant_generated_For_Res_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_cant_generated_For_Res_Product</fullName>
    <active>true</active>
    <description>Contract Cannot be generated if restricted products are involved in the quote.</description>
    <errorConditionFormula>Restrict_Contract_Product_Count__c &gt;0 &amp;&amp; Contracted__c</errorConditionFormula>
    <errorMessage>Contract Cannot be generated if Restricted Products are involved in the quote.</errorMessage>
</ValidationRule>