force-app/main/default/objects/SBQQ__Quote__c/validationRules/New_Billing_Add_Same_Acc_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Billing_Add_Same_Acc_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( New_Bill_To_Address__c )),
    New_Bill_To_Address__r.Account__c &lt;&gt; SBQQ__Account__c 
)</errorConditionFormula>
    <errorMessage>New Bill-To address should belong to Account addresses only.</errorMessage>
</ValidationRule>