force-app/main/default/objects/SBQQ__Quote__c/validationRules/Number_of_days_cannot_be_more_than_31.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_days_cannot_be_more_than_31</fullName>
    <active>true</active>
    <errorConditionFormula>No_of_days_per_month__c &gt; 31 || No_of_days_per_month__c =0</errorConditionFormula>
    <errorMessage>The number of days cannot be more than 31.</errorMessage>
</ValidationRule>