force-app/main/default/objects/SBQQ__Quote__c/validationRules/Number_of_hours_cannot_be_more_than_24.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_hours_cannot_be_more_than_24</fullName>
    <active>true</active>
    <errorConditionFormula>No_of_hours_per_month__c &gt; 24 || No_of_hours_per_month__c =0</errorConditionFormula>
    <errorMessage>The number of hours cannot be greater than 24.</errorMessage>
</ValidationRule>