force-app/main/default/objects/SBQQ__Quote__c/validationRules/OMT_Approval_cant_be_submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>OMT_Approval_cant_be_submitted</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL( SBQQ__Type__c , &apos;Quote&apos;) &amp;&amp;
 ( ISPICKVAL( SBQQ__Status__c , &apos;Approved&apos;) ||  ISPICKVAL( SBQQ__Status__c , &apos;Presented&apos;) )&amp;&amp;
  Submit_for_Approval__c</errorConditionFormula>
    <errorMessage>SCF cannot be submitted for approval before customer acceptance.</errorMessage>
</ValidationRule>