force-app/main/default/objects/SBQQ__Quote__c/validationRules/OMT_Is_Allowed_to_Contract_SCF_Renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>OMT_Is_Allowed_to_Contract_SCF_Renewal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL( SBQQ__Type__c , &quot;Amendment&quot;),
        ISPICKVAL( SBQQ__Type__c , &quot;Renewal&quot;)
    ),
    ISCHANGED( Contracted__c ),
    Contracted__c,
    $Profile.Name &lt;&gt; &quot;Yotta Order Management&quot;,
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Only OMT is allowed to contract SCF and Renewal Quote</errorMessage>
</ValidationRule>