force-app/main/default/objects/SBQQ__Quote__c/validationRules/Only_Cancel_Deactiv_Allow_on_ExpiredCont.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Cancel_Deactiv_Allow_on_ExpiredCont</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( SBQQ__Type__c, &quot;Amendment&quot;),
SBQQ__Opportunity2__r.Amended_Renewed_Contract_Status__c = &quot;Expired&quot;,
NOT(ISPICKVAL( SCF_Type__c , &quot;Contract Line SCF&quot;)),
NOT(ISBLANK(TEXT( SCF_Type__c )))
)</errorConditionFormula>
    <errorMessage>Only Cancellation and Deactivation are allowed on Expired Contract</errorMessage>
</ValidationRule>