force-app/main/default/objects/SBQQ__Quote__c/validationRules/Partner_Commission_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Commission_is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        NOT(ISBLANK( SBQQ__Opportunity2__r.PartnerPrimary__c )),
        NOT(ISBLANK( SBQQ__Opportunity2__r.PartnerSecondary__c )),
        NOT(ISBLANK( SBQQ__Opportunity2__r.PartnerTertiary__c ))
    ),
    ISBLANK(TEXT( Partner_Commision_Model__c )),
    Contracted__c 
)</errorConditionFormula>
    <errorMessage>Please update Partner Commission before generating contract</errorMessage>
</ValidationRule>