force-app/main/default/objects/SBQQ__Quote__c/validationRules/POC_Opportunity_Not_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>POC_Opportunity_Not_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Submit_for_Approval__c ,
ISPICKVAL( SBQQ__Status__c , &apos;Customer Accepted&apos;),
ISPICKVAL(SBQQ__Type__c,&apos;Amendment&apos;),
ISPICKVAL(SCF_Type__c, &apos;Contract Line SCF&apos;),
Full_Quote_Cancellation_Deactivation__c,
POC__c = &apos;Yes&apos;,
NOT(SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.SBQQ__Opportunity__r.IsClosed ))</errorConditionFormula>
    <errorMessage>Please Close the Proposal Opportunity of the Contract</errorMessage>
</ValidationRule>