force-app/main/default/objects/SBQQ__Quote__c/validationRules/Product_Head_Not_allowed_to_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Head_Not_allowed_to_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL( SBQQ__Status__c, &quot;In Review&quot; )),
    $Profile.Name == &quot;Yotta Product Team&quot;,
    NOT(ISCHANGED( LastModifiedDate ))
)</errorConditionFormula>
    <errorMessage>You are not allowed to make any changes</errorMessage>
</ValidationRule>