force-app/main/default/objects/SBQQ__Quote__c/validationRules/Quote_can_be_Contracted_if_primary.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_can_be_Contracted_if_primary</fullName>
    <active>true</active>
    <errorConditionFormula>(!SBQQ__Primary__c &amp;&amp; Contracted__c &amp;&amp;  ISCHANGED(Contracted__c))</errorConditionFormula>
    <errorDisplayField>Contracted__c</errorDisplayField>
    <errorMessage>The Quote can be Contracted only if it is Primary..</errorMessage>
</ValidationRule>