force-app/main/default/objects/SBQQ__Quote__c/validationRules/Quote_Cannot_Be_Contracted.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Cannot_Be_Contracted</fullName>
    <active>true</active>
    <description>Quote can only be contracted once accepted by Customer</description>
    <errorConditionFormula>AND(
    ISCHANGED(Contracted__c),
    Contracted__c,
    NOT(ISPICKVAL( SBQQ__Status__c , &apos;Customer Accepted&apos;)),
    NOT(ISPICKVAL( SBQQ__Type__c , &apos;Renewal&apos;))
)</errorConditionFormula>
    <errorDisplayField>Contracted__c</errorDisplayField>
    <errorMessage>Quote can only be contracted after Customer Acceptance</errorMessage>
</ValidationRule>