force-app/main/default/objects/SBQQ__Quote__c/validationRules/Quote_cannot_be_Contractet.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_cannot_be_Contractet</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    SBQQ__Opportunity2__r.SBQQ__Contracted__c,
 PRIORVALUE(Signed_SCF_Uploaded__c) &lt;&gt; Signed_SCF_Uploaded__c,
    Contracted__c,
    ISCHANGED( Contracted__c )
)</errorConditionFormula>
    <errorDisplayField>Contracted__c</errorDisplayField>
    <errorMessage>Opportunity is already contracted.</errorMessage>
</ValidationRule>