force-app/main/default/objects/SBQQ__Quote__c/validationRules/SCF_other_than_ContractLines_on_Poc.validationRule-meta.xml
<ValidationRule>
    <fullName>SCF_other_than_ContractLines_on_Poc</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(SCF_Type__c , &apos;Contract Line SCF&apos;) &amp;&amp;  POC__c = &apos;Yes&apos; &amp;&amp;  ISPICKVAL(SBQQ__Type__c, &apos;Amendment&apos;) &amp;&amp;  !ISPICKVAL(SCF_Type__c , &apos;&apos;)</errorConditionFormula>
    <errorMessage>Only line item SCF is allowed on POC contract.</errorMessage>
</ValidationRule>