force-app/main/default/objects/SBQQ__Quote__c/validationRules/SCF_Type_Transfer_of_Service.validationRule-meta.xml
<ValidationRule>
    <fullName>SCF_Type_Transfer_of_Service</fullName>
    <active>true</active>
    <description>QuoteLine should be Transfer of Service in case quote scf type is transfer of service.</description>
    <errorConditionFormula>Line_Item_Count_TOS__c = 0 &amp;&amp; 
ISPICKVAL(SCF_Type__c  , &quot;Transfer of Service&quot;) &amp;&amp; 
( ISPICKVAL( SBQQ__Status__c, &quot;Presented&quot;) ||
  ISPICKVAL( SBQQ__Status__c, &quot;Customer Accepted&quot;)
)</errorConditionFormula>
    <errorMessage>Kindly select  line items for transferring the services.</errorMessage>
</ValidationRule>