force-app/main/default/objects/SBQQ__Quote__c/validationRules/SE_cant_modify_after_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>SE_cant_modify_after_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Solution_Engineer__c = $User.Id,
ISCHANGED(SBQQ__Status__c ),
ISPICKVAL ( PRIORVALUE(SBQQ__Status__c) , &quot;Approved&quot;)
)</errorConditionFormula>
    <errorMessage>SE can&apos;t modify quote at this stage.</errorMessage>
</ValidationRule>