force-app/main/default/objects/SBQQ__Quote__c/validationRules/Status_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Restriction</fullName>
    <active>true</active>
    <description>User are not able to select the status as Approved, Rejected or In Review</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
!Exclude_from_Validation__c ,
ISCHANGED( SBQQ__Status__c ),
OR(
ISPICKVAL( SBQQ__Status__c, &quot;In Review&quot;),
ISPICKVAL( SBQQ__Status__c, &quot;Approved&quot;),
ISPICKVAL( SBQQ__Status__c, &quot;Rejected&quot;)
),
AND(
NOT(OR(
ISPICKVAL( Technical_Approval_Status__c , &quot;Approved&quot;),
ISPICKVAL( Technical_Approval_Status__c , &quot;Not Required&quot;)
)),
NOT(OR(
ISPICKVAL( Commercial_Approval_Status__c , &quot;Approved&quot;),
ISPICKVAL( Commercial_Approval_Status__c , &quot;Not Required&quot;)
)),
NOT(OR(
ISPICKVAL( Term_Condition_Approval_Status__c , &quot;Approved&quot;),
ISPICKVAL( Term_Condition_Approval_Status__c , &quot;Not Required&quot;)
))
)
)</errorConditionFormula>
    <errorDisplayField>SBQQ__Status__c</errorDisplayField>
    <errorMessage>This Status cannot be selected</errorMessage>
</ValidationRule>