force-app/main/default/objects/SBQQ__Quote__c/validationRules/Status_Restriction_CustAccepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Restriction_CustAccepted</fullName>
    <active>true</active>
    <description>User are not able to select the status as CustAccepted if the Quote Status is not Approved/Presented</description>
    <errorConditionFormula>AND( 
    ISCHANGED(SBQQ__Status__c),
    ISPICKVAL( SBQQ__Status__c, &quot;Customer Accepted&quot;),
    NOT(ISPICKVAL( PRIORVALUE( SBQQ__Status__c ), &quot;Approved&quot;)),
    NOT(ISPICKVAL( PRIORVALUE( SBQQ__Status__c ), &quot;Presented&quot;))
)</errorConditionFormula>
    <errorDisplayField>SBQQ__Status__c</errorDisplayField>
    <errorMessage>Only Approved /Presented Quotes can be marked as Customer Accepted.</errorMessage>
</ValidationRule>