force-app/main/default/objects/SBQQ__Quote__c/validationRules/Submit_for_Approval_only_if_Terms.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_for_Approval_only_if_Terms</fullName>
    <active>true</active>
    <description>Approval process is generated only if terms are generated</description>
    <errorConditionFormula>IF(
    ISPICKVAL( SBQQ__Type__c, &quot;Quote&quot;),
    AND( 
        ISCHANGED( Submit_for_Approval__c ),
        !Generated_Terms__c,
         Submit_for_Approval__c
    ),
    IF(
        NOT(ISPICKVAL( SBQQ__Type__c, &quot;Quote&quot;)),
        AND( 
            ISCHANGED(  Submit_for_Approval__c ),
            !Generated_Terms__c,
            Submit_for_Approval__c,
            AND(Generate_Deactivation_Term__c,
            New_Line_Count__c &gt; 0)
        ),
        FALSE
    )
)</errorConditionFormula>
    <errorMessage>Please Generate Terms before starting Approval Process.</errorMessage>
</ValidationRule>