force-app/main/default/objects/SBQQ__Quote__c/validationRules/Submit_for_Approval_Without_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_for_Approval_Without_Product</fullName>
    <active>true</active>
    <description>Quote Lines are required for submitting for Approval</description>
    <errorConditionFormula>AND(
    ISCHANGED(  Submit_for_Approval__c ),
    SBQQ__LineItemCount__c == 0,
    Submit_for_Approval__c
)</errorConditionFormula>
    <errorMessage>Please add Quote Lines before starting Approval Process.</errorMessage>
</ValidationRule>