force-app/main/default/objects/SBQQ__Quote__c/validationRules/TnC_can_be_modified_only_in_New_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>TnC_can_be_modified_only_in_New_Quote</fullName>
    <active>true</active>
    <description>T&amp;C fields can be modified only in New Quote, not in Amendment &amp; Renewal Quotes</description>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 NOW() - CreatedDate &gt; 0.0004,
 NOT(ISPICKVAL( SBQQ__Type__c, &apos;Quote&apos;)),
 OR(
  ISCHANGED(One_Time_Charges_Third_Party__c),
  ISCHANGED(Recurring_Charges_Third_Party__c),
  ISCHANGED(One_Time_Charges_Other_Services__c),
  ISCHANGED(Recurring_Charges_Other_Party__c),
  ISCHANGED(Late_Payment_Invoice_Interest__c),
  ISCHANGED(Equipment_Sale_Value__c),
  ISCHANGED(Termination_Fee_Initial_Contract__c),
  ISCHANGED(Termination_Fee_Renewal_renewal__c),
  ISCHANGED(Adv_Written_Notice_Period_Initial_Cntrct__c),
  ISCHANGED(Adv_Written_Notice_Period_Renewal_Cntrct__c)
 )
)</errorConditionFormula>
    <errorMessage>T&amp;C fields can be modified only in New Quote.</errorMessage>
</ValidationRule>