force-app/main/default/objects/SBQQ__Quote__c/validationRules/Update_Quote_is_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Quote_is_Locked</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISCHANGED( LastModifiedDate )),
    NOT(ISCHANGED( SBQQ__Status__c )), 
    ISPICKVAL(SBQQ__Status__c , &apos;Approved&apos;)
)</errorConditionFormula>
    <errorMessage>Only Status can be updated once Quote is Approved</errorMessage>
</ValidationRule>