force-app/main/default/objects/SBQQ__Quote__c/listViews/Commercial_Approval_L2_Product_Head.listView-meta.xml
<ListView>
    <fullName>Commercial_Approval_L2_Product_Head</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Approval_Level_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commercial_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted for Approval</value>
    </filters>
    <filters>
        <field>Approval_Level__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>Commercial Approval Level2</label>
    <sharedTo>
        <role>Sales_Coordinator</role>
        <role>Yotta_Product_Head</role>
    </sharedTo>
</ListView>