force-app/main/default/objects/SBQQ__Quote__c/listViews/Commercial_Approval_L3_CEO.listView-meta.xml
<ListView>
    <fullName>Commercial_Approval_L3_CEO</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commercial_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted for Approval</value>
    </filters>
    <filters>
        <field>Approval_Level__c</field>
        <operation>greaterThan</operation>
        <value>2</value>
    </filters>
    <label>Commercial Approval Level3</label>
    <sharedTo>
        <role>Yotta_Management</role>
    </sharedTo>
</ListView>