force-app/main/default/objects/SBQQ__Quote__c/listViews/Technical_Approval.listView-meta.xml
<ListView>
    <fullName>Technical_Approval</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SBQQ__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Technical_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted for Approval</value>
    </filters>
    <label>Technical Approval</label>
    <sharedTo>
        <role>Sales_Coordinator</role>
        <role>Yotta_SE_Head</role>
    </sharedTo>
</ListView>